--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -1242,7 +1242,7 @@ genes in Supplemental \fref{tab:all_sheep_placenta}.
 
 \begin{figure}
 <<core.placenta.transcriptome,fig.width=8,fig.height=12,out.height="0.8\\textheight",echo=FALSE>>=
-print(ggplot(core.placenta.transcriptome.long[!Species %in% c("median_expression","min_expression"),],
+print(ggplot(core.placenta.transcriptome.long[!grepl("(min|median)_expression",Species),],
              aes(y=human_name,x=capfirst(Species)))
       + geom_tile(aes(fill=log10(FPKM)))
       + scale_x_discrete(expand=c(0,0))
@@ -1257,7 +1257,7 @@ print(ggplot(core.placenta.transcriptome.long[!Species %in% c("median_expression
       + theme_grey()
       + theme(legend.position="top",
               axis.ticks = element_blank(), 
-              axis.text.x = element_text(angle = 340, hjust = 0.3, vjust=0.8,face="italic"))
+              axis.text.x = element_text(angle = 340, hjust = 0.1, vjust=1,face="italic"))
       )
 @ 
 \caption{Core Placenta Transcriptome.
