--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -132,6 +132,12 @@ library("ggtree")
 library("topGO")
 library("org.Hs.eg.db")
 
+data.matrix.dt <- function(x){
+    temp <- data.matrix(as.data.frame(x)[,-1])
+    rownames(temp) <- as.data.frame(x)[,1]
+    temp
+}
+
 capwords <- function(s, strict = FALSE) {
     cap <- function(s) paste(toupper(substring(s, 1, 1)),
                              {s <- substring(s, 2); if(strict) tolower(s) else s},
@@ -144,6 +150,66 @@ capfirst <- function(s, strict = FALSE) {
           {s <- substring(s, 2); if(strict) tolower(s) else s},
           sep = "")
 }
+
+species.names <- 
+    list(
+        "ateles fusciceps"=
+            list(sort.order=1,
+                 common.name="Spider monkey",
+                 scientific.name="Ateles fuciceps"),
+        "homo sapiens"=
+            list(sort.order=2,
+                 common.name="Human",
+                 scientific.name="Homo sapiens"),
+        "pan paniscus"=
+            list(sort.order=3,
+                 common.name="Bonobo",
+                 scientific.name="Pan paniscus"),
+        "mus musculus"=
+            list(sort.order=4,
+                 common.name="mouse",
+                 scientific.name="Mus musculus"),
+        "nannospalax galili"=
+            list(sort.order=5,
+                 name="nannospalax galili",
+                 scientific.name="Nannospalax galili"),
+        "spalax carmeli"=
+            list(sort.order=6,
+                 name="spalax carmeli",
+                 scientific.name="Spalax carmeli"),
+        "bos taurus"=
+            list(sort.order=7,
+                 name="Cow",
+                 scientific.name="Bos taurus"),
+        "ovis aries"=
+            list(sort.order=8,
+                 name="Sheep",
+                 scientific.name="Ovis aries"),
+        "sus scrofa"=
+            list(sort.order=9,
+                 name="Boar",
+                 scientific.name="Sus scrofa"),
+        "equus caballus"=
+            list(sort.order=10,
+                 name="Horse",
+                 scientific.name="Equus caballus"),
+        "canis familiaris"=
+            list(sort.order=11,
+                 name="Dog",
+                 scientific.name="Canis familiaris"),
+        "loxodonta africana"=
+            list(sort.order=12,
+                 name="Elephant",
+                 scientific.name="Loxodonta africana"),
+        "dasypus novemcinctus"=
+            list(sort.order=13,
+                 name="Nine banded armadillo",
+                 scientific.name="Dasypus novemcinctus"),
+        "monodelphis domestica"=
+            list(sort.order=14,
+                 name="Opposum",
+                 scientific.name="Monodelphis domestica"))
+
 
 species <- function(s,join=TRUE) {
     temp <- paste0("\\textit{",capfirst(s),"}")
@@ -186,6 +252,7 @@ for (a in paste0("../data/",c("combined_fpkm","gene_trees",
                               ))) {
     load(a)
 }
+combined.fpkm[,species:=factor(species,levels=names(species.names))]
 setkey(genes.to.tree,"gene_id")
 star.logs[,value:=gsub("%$","",value)]
 star.logs.wide <- 
